# MellowPlayer

./: .gitignore  Cargo.toml  README.md
data/migrations/: 001_initial_schema.sql
src/: main.rs
src/app/: actions.rs  controller.rs  events.rs  mod.rs  state.rs
src/audio/: events.rs  mod.rs  pipeline.rs  player.rs
src/core/: mod.rs
src/core/models/: album.rs  artist.rs  audio_file.rs  genre.rs  mod.rs  playlist.rs  track.rs
src/core/repositories/: album_repo.rs  artist_repo.rs  audio_file_repo.rs  mod.rs  playlist_repo.rs  track_repo.rs
src/core/services/: library_service.rs  metadata_service.rs  mod.rs  playback_service.rs
src/core/use_cases/: mod.rs  play_playlist.rs  play_track.rs  resolve_metadata.rs  scan_library.rs  search.rs
src/scanner/: filesystem.rs  hash.rs  mod.rs  scheduler.rs  tag_reader.rs
src/storage/: mod.rs
src/storage/repositories/: album_repo_sqlite.rs  artist_repo_sqlite.rs  audio_file_repo_sqlite.rs  mod.rs  playlist_repo_sqlite.rs  track_repo_sqlite.rs
src/storage/sqlite/: connection.rs  mod.rs
src/ui/: app_window.rs  mod.rs
src/ui/bindings/: mod.rs  state_binding.rs
src/ui/views/: album_view.rs  library_view.rs  mod.rs  playlist_view.rs  search_view.rs
src/ui/widgets/: album_card.rs  mod.rs  player_bar.rs  track_row.rs
src/utils/: logging.rs  mod.rs  paths.rs  time.rs
