[package]
name = "mellomaniac"
version = "0.1.0"
edition = "2024"
authors = ["Tu Nombre <tu@email.com>"]
description = "Reproductor musical de escritorio con escaneo local y arquitectura limpia"
license = "GPL-3.0-or-later"

[dependencies]
gtk4 = { version = "0.8", package = "gtk4" }
adw = { version = "0.6", package = "libadwaita" }
glib = "0.18"
gstreamer = "0.22"
gstreamer-audio = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
walkdir = "2.5"
notify = "6.1"
sha1 = "0.10"
lofty = "0.18"
chrono = "0.4"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"